new function for get all users
